# conan-embarcadero

./: README.md  bcc32c.conanprofile  set-environment.cmd  settings_user.yml
test_app/: CMakeLists.txt  README.md  build-app.cmd  conanfile.py  conanfile.txt
test_app/src/: CMakeLists.txt  main.cpp
test_lib/: CMakeLists.txt  build-lib.cmd  conanfile.py
test_lib/examples/: CMakeLists.txt  test_main.cpp
test_lib/include/: CMakeLists.txt
test_lib/include/test_lib/: printhello.h
test_lib/src/: CMakeLists.txt  printhello.cpp
test_lib/tests/: CMakeLists.txt
